Fixed horizontal scrolling issue. Nav bar on screens smaller than 851 px is now working excluding better UI

--- a/styles.css
+++ b/styles.css
@@ -88,15 +88,16 @@ img {
 
 @media only screen and (max-width: 850px){
 
+
     #navbar {
         position: absolute;
         top: 0;
         width: 100%;
-        height: 26vh;
+        background-color: rgb(75, 139, 190);
+        height: 26.4vh;
         left: 0;
         right: 0;
         border-right: none;
-        border-bottom: 2px solid black;
         margin-top: 0;
         padding: 0;
     }
@@ -130,14 +131,19 @@ img {
     #main-doc {
         position: relative;
         left: 0;
+        right: 0;
         top: 300px;
         width: 100%;
         height: 100%;
-        padding: 0 20;
+        padding: 0;
         z-index: 1;
     }
 
     #logo {
         display: none;
+    }
+
+    .main-section {
+        margin: 0 4%;
     }
 }
